# SFT-envelope

./: .gitignore  .mcp.json  CLAUDE.md  DPO_SU_VELVET_PER_TASK_DI_NER_(16_03_2023).ipynb  Dockerfile.master  LINEAGE_SYSTEM_ARCHITECTURE.md  MEMORY.md  Makefile  README.md  REFACTORING_SUMMARY.md  SESSION_COMPLETE.md  __init__.py  cli.py  docker-compose.yml  integration_1.md  integration_2.md  integration_3.md  pyproject.toml  requirements.txt  skills-lock.json  test_fixes.py  workflow.md
.claude/: settings.json
.claude/agents/: gsd-code-fixer.md  gsd-debugger.md  gsd-executor.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  WAVE3-CONTEXT.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: recipe-uniqueness-entries-bug.md
.planning/docs/: NEO4J_SCHEMA.md
.planning/issues/: ISSUE-RECIPE-NAME-ATTRIBUTE.md  ISSUE-RECIPE-UI-IMPROVEMENTS.md  ISSUE-RECIPE-VALIDATION-MISSING-LOADER.md
.planning/quick/: 20260415-debug-yaml-parsing.py  20260415-recipe-complete-fixes.md  20260415-recipe-fixes-summary.md
config/: __init__.py  loader.py  models.py
configs/examples/: dpo_qlora_unsloth.yaml  gkd_lora_trl.yaml  grpo_fromscratch.yaml  grpo_lora_velvet2b.yaml  grpo_qlora_qwen.yaml  reward_modeling_trl.yaml  sft_baseline.yaml  sft_fsdp_trl.yaml  sft_lora_llama3.yaml
database/: schema_init.cypher
diagnostics/: __init__.py
docs/: STORAGE.md  architecture.md  config.md  diagnostics.md  distillation.md  frameworks.md  from-scratch.md  fsdp.md  generator.md  hardware.md  master.md  optimization-notes.md  registry.md  techniques.md
docs/lineage/: api-reference.md  architecture.md  database-layer.md  schema.md  troubleshooting.md
envelope/config/: defaults.py  loader.py  models.py  validators.py
envelope/diagnostics/: runtime.py
envelope/frameworks/: accelerate_fsdp.py  base.py  capability_matrix.py
envelope/generators/: setup_generator.py  shared_utils.py
envelope/middleware/: __init__.py
envelope/registry/: __init__.py  base.py
examples/: distillation-gkd.yaml  qlofa-sft.yaml  torchtune-sft.yaml
frameworks/: capability_matrix.py
frameworks/from_scratch/: fromscratch_adapter.py
frameworks/multi_node/: __init__.py  llamafactory_adapter.py  openrlhf_adapter.py
generators/: setup_generator.py
hardware/: auto_optimizer.py  gpu_specs.py
master/: __init__.py  api.py  controllers.py  entrypoint.sh  errors.py
neo4j_client/: 02-triggers.cypher  __init__.py  client.py  init_schema.py  schema.cypher  verify_schema.py
prepare/: datamix_loader.py
registry/: __init__.py
streamlit_ui/: CLAUDE.md  Dockerfile  __init__.py  api_client.py  app.py  config.py  errors.py  health.py  neo4j_async.py  requirements.txt  validation.py
techniques/: base.py
tests/: conftest.py  test_checkpoint_sync.py  test_config_change.py  test_config_resolution.py  test_daemon_lifecycle.py  test_diff_verification.py  test_handshake.py  test_lineage_graph.py  test_merge_strategy.py  test_setup_generator.py
(+437 files in other folders)
