[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finetuning-envelope"
version = "0.1.0"
description = "Setup generation system for reproducible LLM fine-tuning experiments"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

master = [
    "neo4j>=5.0",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "httpx>=0.25",
    "docker>=7.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "watchdog>=3.0",
]

observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-trace-otlp-proto-grpc>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation>=0.41b0",
    "grpcio>=1.56.0",
    "protobuf>=3.20.0",
]

test = [
    "docker>=7.0",
    "pytest-asyncio>=0.24",
]
[project.scripts]
envelope = "envelope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["envelope"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
