[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finetuning-envelope"
version = "0.1.0"
description = "Setup generation system for reproducible LLM fine-tuning experiments"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

test = [
    "docker>=7.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
envelope = "envelope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["envelope", "neo4j_client"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
